# MoralMachineML

./: .gitignore  country_mapping.json  export_onnx.py  index.html  model.onnx  pyproject.toml  train.ipynb
UI/: index.html  trolley_model_acc0_7.pth
